infra/kube/uppy-server/ingress-notls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uppy-server
  namespace: uppy
  annotations:
    # kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: bycactus.me
    http:
      paths:
      - path: /
        backend:
          serviceName: uppy-server
          servicePort: 80
