infra/kube/uppy-server/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uppy-server
  namespace: uppy
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - server.uppy.io
    secretName: uppy-server-tls
  rules:
  - host: server.uppy.io
    http:
      paths:
      - path: /
        backend:
          serviceName: uppy-server
          servicePort: 80
