infra/kube/uppy-server/uppy-server-kube.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: uppy-server
  namespace: uppy
spec:
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: uppy-server
    spec:
      containers:
      - image: docker.io/transloadit/uppy-server:latest
        imagePullPolicy: Always
        name: uppy-server        
        resources:
          limits:
            memory: 150Mi
          requests:
            memory: 100Mi
        ports:
        - containerPort: 3020
        volumeMounts:
        - name: uppy-server-data
          mountPath: /mnt/uppy-server-data
      volumes:
      - name: uppy-server-data
        persistentVolumeClaim:
          claimName: nfs-uppy
---
apiVersion: v1
kind: Service
metadata:
  name: uppy-server
  namespace: uppy
spec:
  ports:
  - port: 80
    targetPort: 3020
    protocol: TCP
  selector:
    app: uppy-server
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uppy-server
  namespace: uppy
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - server.uppy.io
    secretName: uppy-server-tls
  rules:
  - host: server.uppy.io
    http:
      paths:
      - path: /
        backend:
          serviceName: uppy-server
          servicePort: 80
